# Mechanistic-interpretability-of-symbolic-music-model

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/api/: activations.md  model_adapters.md  modeling.md
docs/docs/cli/: activation_extraction.md  preprocess.md  train.md
interpretability/: __init__.py  features.py  plots.py
interpretability/modeling/: predict.py  train.py
music_interpret/: activation_extraction.py  config.py  preprocess.py  train.py
music_interpret/activations/: dataset.py  extractor.py
music_interpret/model_adapters/: base.py  mmt_adapter.py
music_interpret/modeling/: plotting.py  sae.py
notebooks/: feature_exploration.ipynb
