[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "thesis"
version = "0.0.1"
description = "Interpretowalno\u015b\u0107 modeli przetwarzaj\u0105cych muzyk\u0119 w formatach symbolicznych"
authors = [
  { name = "Albert Torzewski" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["iterpretability"]
include = ["pyproject.toml", "iterpretability/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["iterpretability"]
force-sort-within-sections = true

